== newstable: Apr 19, 53 (2023)

 * new: asciidoc-9999.ebuild

   This ebuild provides ladoc-py variant of asciidoc
   Two modifications against upstream asciidoc-py are maintained:

 ** Support for docinfo-header.html
 ** ladi theme

 * qmidiarp-0.6.5.ebuild updated to EAPI=8
 * new: qmidiarp-9999.ebuild

 * upd: media-sound/jackdbus

 ** jackdbus-2.22.1.ebuild
 *** Restore git revision display in the log file

 * upd: media-sound/ladish

 ** ladish-1-r3.ebuild & ladish-1.9999.ebuild
 *** ladish_control: fix py3 exception handling
 ** ladish-9999.ebuild
 *** remove (stable) keywords

== newebuild: Feb 18, 53 (2023)

 * new: jack2-2.22.1.ebuild

 ** jack_get_version_string() now reports GIT_VERSION
 ** Change default of self-connect-mode to 'e'

== newstable: Feb 09, 53 (2023)

 * new: dev-lang/faust

 ** faust-2.41.1.ebuild

 * new: media-plugins/x42-plugins
 ** x42-plugins-99999999.ebuild

 * new: media-sound/gmidimonitor

 ** gmidimonitor-9999.ebuild

 * upd: media-sound/jack2

 ** jack2-2.21.0.ebuild
 ** jack2-2.22.0.ebuild
 ** jack2-2.9999.ebuild
 ** git src url adjusted to github.com/LADI one, git.nedk.org is down
 ** jack2-2.x codebase incorporates jackaudio.org jack2-1.9.x codebase.
    For LADIOS, media-sound/jack2 is now jack2-2.x, the ladi-jack2 variants
 ** jackdbus is now packaged as media-sound/jackdbus
 ** media-sound/jack2 does not install jack server frontends (jackdbus, jackd) anymore

 * new: media-sound/jackdbus

 ** jackdbus-2.21.0.ebuild
 ** jackdbus-2.9999.ebuild

 * upd: media-sound/ladish
 ** ladish-1.9999.ebuild
 ** ladish-9999.ebuild
 ** updated ladish ebuilds now depends on ladi-jack2
 ** git src url adjusted to github.com/LADI one, git.nedk.org is down

== newebuild: Jan 26, 53 (2023)

 * A jack_mixer-17.ebuild

== updebuild: Jan 05, 53 (2023)

 * Set ladish git repo to github one
 * media-sound/ladish: add 3.10 and 3.11 to PYTHON_COMPAT
 * Add dev-cpp/libgnomecanvasmm
   Copied from main gentoo portage tree where it was removed.